fixed midleft and right alignment

--- a/style.css
+++ b/style.css
@@ -97,12 +97,12 @@
     grid-area: 1/2/1/3;
     display: flex;
     align-items: end;
-    margin: 15px;
+    margin-left: 15px;
 }
 
 #mainLeft {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
     gap: 40px;
     margin-right:10px;
     margin-left: 20px;
@@ -127,13 +127,17 @@
 }
 
 #mainRight {
-    gap:20px;
     display: grid;
-    grid-template-rows:0.16fr 1fr 0.16fr 1fr;
-    margin-bottom:100px;
+    grid-template-rows:1fr 0.16fr 1fr;
+    
     margin-left:10px;
     margin-right: 30px;
 }
+
+#mainHead3 {
+    margin-top: 50px ;
+}
+
 #mainRight div {
     background-color: white;
     border-radius: 20px;
